--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,6 @@
 @tailwind base;
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap');
+
 html,
 body {
   padding: 0;
